src/hw/accel/futhark_kernels.h

struct futhark_context;
struct futhark_f16_2d;
struct futhark_f16_2d *futhark_new_f16_2d(struct futhark_context *ctx, const uint16_t *data, int64_t dim0, int64_t dim1);
int futhark_free_f16_2d(struct futhark_context *ctx, struct futhark_f16_2d *arr);
int futhark_values_f16_2d(struct futhark_context *ctx, struct futhark_f16_2d *arr, uint16_t *data);
unsigned char *futhark_values_raw_f16_2d(struct futhark_context *ctx, struct futhark_f16_2d *arr);
const int64_t *futhark_shape_f16_2d(struct futhark_context *ctx, struct futhark_f16_2d *arr);
struct futhark_f16_3d;
struct futhark_f16_3d *futhark_new_f16_3d(struct futhark_context *ctx, const uint16_t *data, int64_t dim0, int64_t dim1, int64_t dim2);
int futhark_free_f16_3d(struct futhark_context *ctx, struct futhark_f16_3d *arr);
int futhark_values_f16_3d(struct futhark_context *ctx, struct futhark_f16_3d *arr, uint16_t *data);
unsigned char *futhark_values_raw_f16_3d(struct futhark_context *ctx, struct futhark_f16_3d *arr);
const int64_t *futhark_shape_f16_3d(struct futhark_context *ctx, struct futhark_f16_3d *arr);
struct futhark_f32_1d;
struct futhark_f32_1d *futhark_new_f32_1d(struct futhark_context *ctx, const float *data, int64_t dim0);
int futhark_free_f32_1d(struct futhark_context *ctx, struct futhark_f32_1d *arr);
int futhark_values_f32_1d(struct futhark_context *ctx, struct futhark_f32_1d *arr, float *data);
unsigned char *futhark_values_raw_f32_1d(struct futhark_context *ctx, struct futhark_f32_1d *arr);
const int64_t *futhark_shape_f32_1d(struct futhark_context *ctx, struct futhark_f32_1d *arr);
struct futhark_f32_2d;
struct futhark_f32_2d *futhark_new_f32_2d(struct futhark_context *ctx, const float *data, int64_t dim0, int64_t dim1);
int futhark_free_f32_2d(struct futhark_context *ctx, struct futhark_f32_2d *arr);
int futhark_values_f32_2d(struct futhark_context *ctx, struct futhark_f32_2d *arr, float *data);
unsigned char *futhark_values_raw_f32_2d(struct futhark_context *ctx, struct futhark_f32_2d *arr);
const int64_t *futhark_shape_f32_2d(struct futhark_context *ctx, struct futhark_f32_2d *arr);
struct futhark_f32_3d;
struct futhark_f32_3d *futhark_new_f32_3d(struct futhark_context *ctx, const float *data, int64_t dim0, int64_t dim1, int64_t dim2);
int futhark_free_f32_3d(struct futhark_context *ctx, struct futhark_f32_3d *arr);
int futhark_values_f32_3d(struct futhark_context *ctx, struct futhark_f32_3d *arr, float *data);
unsigned char *futhark_values_raw_f32_3d(struct futhark_context *ctx, struct futhark_f32_3d *arr);
const int64_t *futhark_shape_f32_3d(struct futhark_context *ctx, struct futhark_f32_3d *arr);
struct futhark_i64_1d;
struct futhark_i64_1d *futhark_new_i64_1d(struct futhark_context *ctx, const int64_t *data, int64_t dim0);
int futhark_free_i64_1d(struct futhark_context *ctx, struct futhark_i64_1d *arr);
int futhark_values_i64_1d(struct futhark_context *ctx, struct futhark_i64_1d *arr, int64_t *data);
unsigned char *futhark_values_raw_i64_1d(struct futhark_context *ctx, struct futhark_i64_1d *arr);
const int64_t *futhark_shape_i64_1d(struct futhark_context *ctx, struct futhark_i64_1d *arr);
struct futhark_u64_1d;
struct futhark_u64_1d *futhark_new_u64_1d(struct futhark_context *ctx, const uint64_t *data, int64_t dim0);
int futhark_free_u64_1d(struct futhark_context *ctx, struct futhark_u64_1d *arr);
int futhark_values_u64_1d(struct futhark_context *ctx, struct futhark_u64_1d *arr, uint64_t *data);
unsigned char *futhark_values_raw_u64_1d(struct futhark_context *ctx, struct futhark_u64_1d *arr);
const int64_t *futhark_shape_u64_1d(struct futhark_context *ctx, struct futhark_u64_1d *arr);
int futhark_entry_graph_batch_encode(struct futhark_context *ctx, struct futhark_u64_1d **out0, struct futhark_f32_1d **out1, struct futhark_f32_1d **out2, struct futhark_f32_1d **out3, struct futhark_f32_1d **out4, struct futhark_i64_1d **out5, struct futhark_i64_1d **out6, const struct futhark_u64_1d *in0, const uint64_t in1);
int futhark_entry_matmul(struct futhark_context *ctx, struct futhark_f32_2d **out0, const struct futhark_f32_2d *in0, const struct futhark_f32_2d *in1);
int futhark_entry_rsf_forward(struct futhark_context *ctx, struct futhark_f32_1d **out0, const struct futhark_f32_1d *in0, const struct futhark_f32_2d *in1, const struct futhark_f32_2d *in2, const struct futhark_i64_1d *in3, const float in4, const float in5);