src/hw/accel/futhark_abi.zig

// @generated by tools/futhark_abi_gen.py -- DO NOT EDIT BY HAND.
// Source manifest: main_gpu.json
// Futhark version: 0.25.29.   backend: cuda
// Tuple returns are flattened into out-parameters.

pub const futhark_version: []const u8 = "0.25.29.";
pub const futhark_backend: []const u8 = "cuda";
pub const tuple_outputs_flattened: bool = true;

pub const struct_futhark_context = opaque {};
pub const struct_futhark_context_config = opaque {};
pub const struct_futhark_f16_2d = opaque {};
pub const struct_futhark_f16_3d = opaque {};
pub const struct_futhark_f32_1d = opaque {};
pub const struct_futhark_f32_2d = opaque {};
pub const struct_futhark_f32_3d = opaque {};
pub const struct_futhark_i64_1d = opaque {};
pub const struct_futhark_u64_1d = opaque {};

pub extern "c" fn futhark_entry_clip_matrix_global_norm_f32(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f32_2d,
    values: ?*const struct_futhark_f32_2d,
    clip_norm: f32,
) c_int;

pub extern "c" fn futhark_entry_embedding_backward_padded(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f32_2d,
    tokens: ?*const struct_futhark_i64_1d,
    lengths: ?*const struct_futhark_i64_1d,
    grad_output: ?*const struct_futhark_f16_3d,
    grad_weight: ?*const struct_futhark_f32_2d,
) c_int;

pub extern "c" fn futhark_entry_embedding_forward_padded(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f16_3d,
    tokens: ?*const struct_futhark_i64_1d,
    lengths: ?*const struct_futhark_i64_1d,
    positions: ?*const struct_futhark_i64_1d,
    weight: ?*const struct_futhark_f16_2d,
) c_int;

pub extern "c" fn futhark_entry_embedding_spectral_normalize(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f32_2d,
    out1: ?*?*struct_futhark_f32_1d,
    out2: ?*?*struct_futhark_f32_1d,
    out3: ?*f32,
    out4: ?*f32,
    weight: ?*const struct_futhark_f32_2d,
    u: ?*const struct_futhark_f32_1d,
    v: ?*const struct_futhark_f32_1d,
    power_iters: i64,
    target: f32,
) c_int;

pub extern "c" fn futhark_entry_embedding_sum_squares(
    ctx: ?*struct_futhark_context,
    out0: ?*f32,
    source: ?*const struct_futhark_f16_2d,
) c_int;

pub extern "c" fn futhark_entry_embedding_update_sfd_master(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f32_2d,
    out1: ?*?*struct_futhark_f32_2d,
    out2: ?*?*struct_futhark_f32_2d,
    master_weight: ?*const struct_futhark_f32_2d,
    grad_weight: ?*const struct_futhark_f32_2d,
    momentum_state: ?*const struct_futhark_f32_2d,
    fisher_state: ?*const struct_futhark_f32_2d,
    learning_rate: f32,
    momentum_beta: f32,
    fisher_gamma: f32,
    optimizer_step: i64,
    epsilon: f32,
    trust_ratio: f32,
    weight_floor: f32,
) c_int;

pub extern "c" fn futhark_entry_graph_batch_encode(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_u64_1d,
    out1: ?*?*struct_futhark_f32_1d,
    out2: ?*?*struct_futhark_f32_1d,
    out3: ?*?*struct_futhark_f32_1d,
    out4: ?*?*struct_futhark_f32_1d,
    out5: ?*?*struct_futhark_i64_1d,
    out6: ?*?*struct_futhark_i64_1d,
    data_hashes: ?*const struct_futhark_u64_1d,
    _seed: u64,
) c_int;

pub extern "c" fn futhark_entry_master_weights_to_f16_2d(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f16_2d,
    weights: ?*const struct_futhark_f32_2d,
) c_int;

pub extern "c" fn futhark_entry_master_weights_to_f16_3d(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f16_3d,
    weights: ?*const struct_futhark_f32_3d,
) c_int;

pub extern "c" fn futhark_entry_matmul(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f32_2d,
    a: ?*const struct_futhark_f32_2d,
    b: ?*const struct_futhark_f32_2d,
) c_int;

pub extern "c" fn futhark_entry_rsf_forward(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f16_2d,
    input: ?*const struct_futhark_f16_2d,
    weights_s: ?*const struct_futhark_f16_2d,
    weights_t: ?*const struct_futhark_f16_2d,
    clip_min: u16,
    clip_max: u16,
) c_int;

pub extern "c" fn futhark_entry_rsf_stack_backward_gradients_fused(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f32_3d,
    out1: ?*?*struct_futhark_f32_3d,
    out2: ?*?*struct_futhark_f16_3d,
    out3: ?*f32,
    out4: ?*f32,
    out5: ?*f32,
    final_outputs: ?*const struct_futhark_f16_3d,
    targets: ?*const struct_futhark_f16_3d,
    originals: ?*const struct_futhark_f16_3d,
    lengths: ?*const struct_futhark_i64_1d,
    weights_s: ?*const struct_futhark_f16_3d,
    weights_t: ?*const struct_futhark_f16_3d,
    grad_mean: bool,
    gradient_scale: f32,
    clip_min: f32,
    clip_max: f32,
    reconstruction_alpha: f32,
    forward_scale: f32,
    logdet_weight: f32,
) c_int;

pub extern "c" fn futhark_entry_rsf_stack_forward(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f16_3d,
    inputs: ?*const struct_futhark_f16_3d,
    weights_s: ?*const struct_futhark_f16_3d,
    weights_t: ?*const struct_futhark_f16_3d,
    clip_min: u16,
    clip_max: u16,
) c_int;

pub extern "c" fn futhark_entry_rsf_stack_inverse(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f16_3d,
    outputs: ?*const struct_futhark_f16_3d,
    weights_s: ?*const struct_futhark_f16_3d,
    weights_t: ?*const struct_futhark_f16_3d,
    clip_min: u16,
    clip_max: u16,
) c_int;

pub extern "c" fn futhark_entry_scale_matrix_f32(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f32_2d,
    values: ?*const struct_futhark_f32_2d,
    scale_factor: f32,
) c_int;

pub extern "c" fn futhark_entry_stack_spectral_normalize(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f32_3d,
    out1: ?*f32,
    out2: ?*f32,
    weights: ?*const struct_futhark_f32_3d,
    target: f32,
    power_iters: i64,
) c_int;

pub extern "c" fn futhark_entry_stack_update_sfd_master(
    ctx: ?*struct_futhark_context,
    out0: ?*?*struct_futhark_f32_3d,
    out1: ?*?*struct_futhark_f32_3d,
    out2: ?*?*struct_futhark_f32_3d,
    master_weights: ?*const struct_futhark_f32_3d,
    gradients: ?*const struct_futhark_f32_3d,
    momentum_state: ?*const struct_futhark_f32_3d,
    fisher_state: ?*const struct_futhark_f32_3d,
    learning_rate: f32,
    momentum_beta: f32,
    fisher_gamma: f32,
    optimizer_step: i64,
    epsilon: f32,
    trust_ratio: f32,
    weight_floor: f32,
) c_int;

pub extern "c" fn futhark_new_f16_3d(ctx: ?*struct_futhark_context, data: ?[*]const u16, dim0: i64, dim1: i64, dim2: i64) ?*struct_futhark_f16_3d;
pub extern "c" fn futhark_free_f16_3d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f16_3d) c_int;
pub extern "c" fn futhark_values_f16_3d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f16_3d, data: ?[*]u16) c_int;
pub extern "c" fn futhark_shape_f16_3d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f16_3d) ?[*]const i64;
pub extern "c" fn futhark_values_raw_f16_3d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f16_3d) ?*anyopaque;

pub extern "c" fn futhark_new_f32_3d(ctx: ?*struct_futhark_context, data: ?[*]const f32, dim0: i64, dim1: i64, dim2: i64) ?*struct_futhark_f32_3d;
pub extern "c" fn futhark_free_f32_3d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_3d) c_int;
pub extern "c" fn futhark_values_f32_3d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_3d, data: ?[*]f32) c_int;
pub extern "c" fn futhark_shape_f32_3d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_3d) ?[*]const i64;
pub extern "c" fn futhark_values_raw_f32_3d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_3d) ?*anyopaque;

pub extern "c" fn futhark_new_f16_2d(ctx: ?*struct_futhark_context, data: ?[*]const u16, dim0: i64, dim1: i64) ?*struct_futhark_f16_2d;
pub extern "c" fn futhark_free_f16_2d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f16_2d) c_int;
pub extern "c" fn futhark_values_f16_2d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f16_2d, data: ?[*]u16) c_int;
pub extern "c" fn futhark_shape_f16_2d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f16_2d) ?[*]const i64;
pub extern "c" fn futhark_values_raw_f16_2d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f16_2d) ?*anyopaque;

pub extern "c" fn futhark_new_f32_2d(ctx: ?*struct_futhark_context, data: ?[*]const f32, dim0: i64, dim1: i64) ?*struct_futhark_f32_2d;
pub extern "c" fn futhark_free_f32_2d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_2d) c_int;
pub extern "c" fn futhark_values_f32_2d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_2d, data: ?[*]f32) c_int;
pub extern "c" fn futhark_shape_f32_2d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_2d) ?[*]const i64;
pub extern "c" fn futhark_values_raw_f32_2d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_2d) ?*anyopaque;

pub extern "c" fn futhark_new_f32_1d(ctx: ?*struct_futhark_context, data: ?[*]const f32, dim0: i64) ?*struct_futhark_f32_1d;
pub extern "c" fn futhark_free_f32_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_1d) c_int;
pub extern "c" fn futhark_values_f32_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_1d, data: ?[*]f32) c_int;
pub extern "c" fn futhark_shape_f32_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_1d) ?[*]const i64;
pub extern "c" fn futhark_values_raw_f32_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_f32_1d) ?*anyopaque;

pub extern "c" fn futhark_new_i64_1d(ctx: ?*struct_futhark_context, data: ?[*]const i64, dim0: i64) ?*struct_futhark_i64_1d;
pub extern "c" fn futhark_free_i64_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_i64_1d) c_int;
pub extern "c" fn futhark_values_i64_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_i64_1d, data: ?[*]i64) c_int;
pub extern "c" fn futhark_shape_i64_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_i64_1d) ?[*]const i64;
pub extern "c" fn futhark_values_raw_i64_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_i64_1d) ?*anyopaque;

pub extern "c" fn futhark_new_u64_1d(ctx: ?*struct_futhark_context, data: ?[*]const u64, dim0: i64) ?*struct_futhark_u64_1d;
pub extern "c" fn futhark_free_u64_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_u64_1d) c_int;
pub extern "c" fn futhark_values_u64_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_u64_1d, data: ?[*]u64) c_int;
pub extern "c" fn futhark_shape_u64_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_u64_1d) ?[*]const i64;
pub extern "c" fn futhark_values_raw_u64_1d(ctx: ?*struct_futhark_context, arr: ?*struct_futhark_u64_1d) ?*anyopaque;

